--- a/configs/typescript-config/package.json
+++ b/configs/typescript-config/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@ethos/typescript-config",
-  "version": "0.0.0",
-  "private": true,
-  "license": "MIT",
-  "publishConfig": {
-    "access": "public"
-  }
+	"name": "@ethos/config-typescript",
+	"version": "0.0.0",
+	"private": true,
+	"license": "MIT",
+	"publishConfig": {
+		"access": "public"
+	}
 }
