--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,6 +7,7 @@
 		"react": "catalog:react19",
 		"react-dom": "catalog:react19",
 		"zod": "catalog:react19",
+		"zustand": "catalog:react19",
 
 		"@radix-ui/react-slot": "^1.1.2",
 		"class-variance-authority": "^0.7.1",
@@ -21,7 +22,7 @@
 		"@types/node": "catalog:react19",
 		"@types/react": "catalog:react19",
 		"@types/react-dom": "catalog:react19",
-		"@ethos/typescript-config": "workspace:*",
+		"@ethos/config-typescript": "workspace:*",
 		"tailwindcss": "catalog:react19",
 		"typescript": "catalog:react19",
 
