--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -8,7 +8,7 @@ catalogs:
     '@biomejs/biome': 2.1.3
     '@tailwindcss/postcss': 4.1.8
     '@tanstack/react-form': 1.12.1
-    '@tanstack/react-query': ^5.80.2
+    '@tanstack/react-query': 5.80.2
     '@tanstack/react-table': 8.21.3
     '@types/node': 22.13.14
     '@types/react': 19.1.7
@@ -26,4 +26,5 @@ catalogs:
     "zod": 4.0.13
     "porto": 0.0.58
     "ox": 0.8.6
+    "zustand": 5.0.7
 
