--- a/apps/ethos.xyz/package.json
+++ b/apps/ethos.xyz/package.json
@@ -9,10 +9,10 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@ethos/ui": "workspace:*",
-		"@ethos/core": "workspace:*",
 		"@ethos/connect-button": "workspace:*",
-
+		"@ethos/core": "workspace:*",
+		"@ethos/ui": "workspace:*",
+		"@icons-pack/react-simple-icons": "^13.7.0",
 		"@tanstack/react-query": "catalog:react19",
 		"lucide-react": "^0.475.0",
 		"next": "catalog:react19",
