--- a/apps/ethos.xyz/package.json
+++ b/apps/ethos.xyz/package.json
@@ -14,6 +14,10 @@
 		"@ethos/ui": "workspace:*",
 		"@icons-pack/react-simple-icons": "^13.7.0",
 		"@tanstack/react-query": "catalog:react19",
+		"alchemy-sdk": "^3.6.3",
+		"http-status-codes": "^2.3.0",
+		"lightweight-charts": "^5.0.8",
+		"lightweight-charts-react-components": "^1.3.0",
 		"lucide-react": "^0.475.0",
 		"next": "catalog:react19",
 		"ox": "catalog:react19",
