--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,29 +4,28 @@
 	"type": "module",
 	"private": true,
 	"dependencies": {
-		"react": "catalog:react19",
-		"react-dom": "catalog:react19",
-		"zod": "catalog:react19",
-		"zustand": "catalog:react19",
-
+		"@radix-ui/react-separator": "^1.1.7",
 		"@radix-ui/react-slot": "^1.1.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.475.0",
 		"next-themes": "^0.4.4",
+		"react": "catalog:react19",
+		"react-dom": "catalog:react19",
 		"tailwind-merge": "^3.0.1",
-		"tw-animate-css": "^1.2.4"
+		"tw-animate-css": "^1.2.4",
+		"zod": "catalog:react19",
+		"zustand": "catalog:react19"
 	},
 	"devDependencies": {
+		"@ethos/config-typescript": "workspace:*",
 		"@tailwindcss/postcss": "catalog:react19",
+		"@turbo/gen": "^2.4.2",
 		"@types/node": "catalog:react19",
 		"@types/react": "catalog:react19",
 		"@types/react-dom": "catalog:react19",
-		"@ethos/config-typescript": "workspace:*",
 		"tailwindcss": "catalog:react19",
-		"typescript": "catalog:react19",
-
-		"@turbo/gen": "^2.4.2"
+		"typescript": "catalog:react19"
 	},
 	"peerDependencies": {
 		"next": "catalog:react19"
@@ -34,7 +33,6 @@
 	"exports": {
 		"./globals.css": "./src/globals.css",
 		"./postcss.config": "./postcss.config.mjs",
-
 		"./lib/*": "./src/lib/*.ts",
 		"./components/*": "./src/components/*.tsx",
 		"./hooks/*": "./src/hooks/*.ts"
