--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -8,7 +8,7 @@ catalogs:
   react19:
     '@biomejs/biome': 2.1.3
     '@tailwindcss/postcss': 4.1.8
-    '@tanstack/react-form': 1.12.1
+    '@tanstack/react-form': 1.23.8
     '@tanstack/react-query': 5.80.2
     '@tanstack/react-table': 8.21.3
     '@types/node': ^22.13.14
@@ -28,3 +28,4 @@ catalogs:
     wagmi: 2.16.9
     zod: 4.0.13
     zustand: 5.0.7
+    lucide-react: 0.553.0
