--- a/apps/0_0xbuidlerhq.xyz/package.json
+++ b/apps/0_0xbuidlerhq.xyz/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@0xbuidlerhq/apps-0xbuidler.xyz",
+	"name": "@0xbuidlerhq/apps.0xbuidler.xyz",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
