--- a/apps/3_ethos.xyz/package.json
+++ b/apps/3_ethos.xyz/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@0xbuidlerhq/apps-ethos.xyz",
+	"name": "@0xbuidlerhq/apps.ethos.xyz",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
