--- a/apps/4_utility.af/package.json
+++ b/apps/4_utility.af/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@0xbuidlerhq/apps-utility.af",
+	"name": "@0xbuidlerhq/apps.utility.af",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
