--- a/apps/1_betterlido.xyz/package.json
+++ b/apps/1_betterlido.xyz/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@0xbuidlerhq/apps-betterlido.xyz",
+	"name": "@0xbuidlerhq/apps.betterlido.xyz",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
