--- a/apps/1_betterlido.xyz/package.json
+++ b/apps/1_betterlido.xyz/package.json
@@ -9,6 +9,8 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@0xbuidlerhq/connect-button": "workspace:*",
+		"@0xbuidlerhq/core": "workspace:*",
 		"@0xbuidlerhq/ui": "workspace:*",
 		"@icons-pack/react-simple-icons": "^13.7.0",
 		"@react-spring/web": "10.0.1",
@@ -16,12 +18,15 @@
 		"@tanstack/react-query": "catalog:react19",
 		"gray-matter": "^4.0.3",
 		"lucide-react": "^0.475.0",
+		"motion": "^12.23.24",
 		"next": "catalog:react19",
 		"react": "catalog:react19",
 		"react-dom": "catalog:react19",
 		"react-markdown": "^10.1.0",
 		"react-use": "^17.6.0",
 		"remark-gfm": "^4.0.1",
+		"viem": "catalog:react19",
+		"wagmi": "catalog:react19",
 		"zustand": "^5.0.8"
 	},
 	"devDependencies": {
