--- a/apps/1_betterlido.xyz/package.json
+++ b/apps/1_betterlido.xyz/package.json
@@ -24,6 +24,7 @@
 		"react-dom": "catalog:react19",
 		"react-markdown": "^10.1.0",
 		"react-use": "^17.6.0",
+		"recharts": "^3.1.2",
 		"remark-gfm": "^4.0.1",
 		"viem": "catalog:react19",
 		"wagmi": "catalog:react19",
