--- a/apps/1_betterlido.xyz/package.json
+++ b/apps/1_betterlido.xyz/package.json
@@ -17,11 +17,13 @@
 		"@tailwindcss/typography": "^0.5.19",
 		"@tanstack/react-query": "catalog:react19",
 		"gray-matter": "^4.0.3",
+		"http-status-codes": "^2.3.0",
 		"lucide-react": "^0.475.0",
 		"motion": "^12.23.24",
 		"next": "catalog:react19",
 		"react": "catalog:react19",
 		"react-dom": "catalog:react19",
+		"@tanstack/react-table": "catalog:react19",
 		"react-markdown": "^10.1.0",
 		"react-use": "^17.6.0",
 		"recharts": "^3.1.2",
