--- a/apps/2_idkyet/package.json
+++ b/apps/2_idkyet/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "@0xbuidlerhq/apps.betterlido.xyz",
+	"name": "@0xbuidlerhq/apps.onchainrent.xyz",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbopack --port 3001",
+		"dev": "next dev --turbopack --port 3002",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint"
