--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -42,6 +42,8 @@
 		"./postcss.config": "./postcss.config.mjs",
 		"./lib/*": "./src/lib/*.ts",
 		"./components/*": "./src/components/*.tsx",
-		"./hooks/*": "./src/hooks/*.ts"
+		"./hooks/*": "./src/hooks/*.ts",
+		"./fonts/*": "./src/fonts/*.ts",
+		"./shadcn/lib/utils.ts": "./src/shadcn/lib/utils.ts"
 	}
 }
