--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,10 @@
 	"typescript.preferences.importModuleSpecifier": "non-relative",
 	"editor.linkedEditing": true,
 
+	"[solidity]": {
+		"editor.defaultFormatter": "NomicFoundation.hardhat-solidity"
+	},
+
 	/*
 	 * Tailwind
 	 */
