--- a/projects/utilityaf/package.json
+++ b/projects/utilityaf/package.json
@@ -5,12 +5,12 @@
 	"scripts": {
 		"dev": "next dev --turbopack --port 3000",
 		"build": "next build",
-		"start": "next start",
-		"lint": "next lint"
+		"start": "next start"
 	},
 	"dependencies": {
 		"@0xbuidlerhq/ui": "workspace:*",
 		"@0xbuidlerhq/core": "workspace:*",
+		"@0xbuidlerhq/animotion": "workspace:*",
 		"@icons-pack/react-simple-icons": "^13.7.0",
 		"@react-spring/web": "10.0.1",
 		"@tailwindcss/typography": "^0.5.19",
@@ -18,7 +18,7 @@
 		"@tanstack/react-query": "catalog:react19",
 		"gray-matter": "^4.0.3",
 		"lucide-react": "catalog:react19",
-		"motion": "^12.23.24",
+		"motion": "catalog:react19",
 		"next": "catalog:react19",
 		"react": "catalog:react19",
 		"react-dom": "catalog:react19",
